<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prev">Prev</string>
    <string name="environment">qa</string>
    <string name="approved_jobs">Approve Jobs</string>
    <string name="approve_measurements">Approve Measurements</string>
    <string name="measure_estimates">Measure Estimates</string>
    <string name="webapi_web_service_protocol">http</string>
    <string name="webapi_web_service_protocol_prod">https</string>
    <string name="webapi_web_service_protocol_separator">://</string>
    <string name="webapi_web_service_uri_host_local">10.0.0.24</string>
    <string name="webapi_web_service_uri_host_101">10.0.0.101</string>
    <string name="webapi_web_service_uri_host_109">10.0.0.109</string>
    <string name="webapi_web_service_uri_host_qa">192.168.4.61:81</string>
    <string name="webapi_web_service_uri_host_qa_old">196.25.218.14</string>
    <string name="webapi_web_service_uri_host_prod">itis.nra.co.za</string>
    <string name="webapi_web_service_path">/MobileServices/api/RRM/</string>
    <string name="fixed_coordinates">true</string>
    <string name="expanding_group">Expanding group</string>
    <string name="expanding_group_subtitle">Tap on the header to expand or contract the group.</string>
    <string name="error_getting_image">There was an Error writing your image to your phone</string>
    <string name="place_quantity">Please place a Quantity</string>
    <string name="contract_info_refresh_end_point">ContractInfoRefresh</string>
    <string name="contracts_refresh_end_point">ContractsRefresh</string>
    <string name="rrm_activity_sections_refresh">RrmActivitySectionsRefresh</string>
    <string name="get_route_section_point">GetRouteSectionPoint</string>
    <string name="working_offline">Note: You are currently working Offline. Co-Ordinates saved.</string>
    <string name="no_section_for_project">Picture falls outside of the project section.</string>
    <string name="no_section_for_project_item">We could not find the SECTION for the ITEM:</string>
    <string name="photo_from_other_section">Ensure that the Photo you are taking of the item is from the same section.</string>
    <string name="photo_from_other_section_item">seems to be from a different section.</string>
    <string name="effective_roles_refresh_end_point">EffectiveRolesRefresh</string>
    <string name="get_rrm_job_end_point">GetRRMJob</string>
    <string name="get_rrm_job_photo_end_point">GetRrmJobPhoto</string>
    <string name="get_rrm_job_photo_end_point_estimate_photo">GetRrmJobPhotoEstimate</string>
    <string name="get_user_task_list_end_point">GetUserTaskList</string>
    <string name="get_user_id">GetUserId</string>
    <string name="health_check">HealthCheck</string>
    <string name="please_try_later">Please try submitting your Job later.</string>
    <string name="mobile_lookups_refresh_end_point">MobileLookupsRefresh</string>
    <string name="project_sections_refresh_end_point">ProjectSectionsRefresh</string>
    <string name="project_vos_refresh_end_point">ProjectVosRefresh</string>
    <string name="registration_end_point">Register</string>
    <string name="upload_work_item">UploadWorksItem</string>
    <string name="update_rrm_job">UpdateRrmJob</string>
    <string name="save_measure_items">SaveMeasurementItems</string>
    <string name="upload_rrm_image_end_point">UploadRrmImage</string>
    <string name="user_roles_refresh_end_point">UserRolesRefresh</string>
    <string name="workflow_move_end_point">WorkflowMove</string>
    <string name="workflow_move_version_2">WorkflowMoveV2</string>
    <string name="workflows_refresh_end_point">WorkflowsRefresh</string>
    <string name="action_to_do_list">Refresh Workflow Items</string>
    <string name="add_photo">Add Photo</string>
    <string name="alert">Alert</string>
    <string name="sync_with_server">Sync with Server</string>
    <string name="alert_title_registration_uri">Registration URI</string>
    <string name="all_data_will_be_deleted_are_you_sure">All data will be deleted!  Are you sure?</string>
    <string name="already_added">already added.</string>
    <string name="android_sdk">Android SDK:</string>
    <string name="app_name">RRM</string>
    <string name="app_label">Maintenance</string>
    <string name="approve_measurement_item">Approve Measurement Item</string>
    <string name="approve_submitted_measurement">Approve Submitted Measurement</string>
    <string name="approving_measurements">Approving measurements</string>
    <string name="are_you_sure_you_want_to_request_correction">Request Correction for this Job?</string>
    <string name="are_you_sure_you_want_to_decline">Decline this job?</string>
    <string name="are_you_sure_you_want_to_decline2">Decline these measurements?</string>
    <string name="are_you_sure_you_want_to_correct">Correct these Measurements?</string>
    <string name="are_you_sure_you_want_to_correct_esti">Correct these estimates?</string>
    <string name="are_you_sure_you_want_to_approve">Approve this job?</string>
    <string name="are_you_sure_you_want_to_approve2">Approve these measurements?</string>
    <string name="are_you_sure_you_want_to_exit">Exit?</string>
    <string name="are_you_sure_you_want_to_save">Save this Job?</string>
    <string name="are_you_sure_you_want_to_logout">Logout?</string>
    <string name="are_you_sure_you_want_to_mark_this_as_done">Mark this as done?</string>
    <string name="b_uppercase" />
    <string name="back">Done</string>
    <string name="building_googleapiclient">Building GoogleApiClient</string>
    <string name="c_uppercase">C</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="capture_item_measure_photo">Capture Item Measure Photo</string>
    <string name="capture_job_details">Capture Job Details</string>
    <string name="capture_job_estimates">Capture Job Estimates</string>
    <string name="capture_job_location">Capture Job Location</string>
    <string name="capture_work">Capture Work</string>
    <string name="cast_to_string">"%1$s"</string>
    <string name="category">Category</string>
    <string name="category_uppercase">CATEGORY</string>
    <string name="change_endpoint">Change Endpoint</string>
    <string name="changing_end_point">Changing Endpoint…</string>
    <string name="colon">": "</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_new_pin">Confirm New PIN</string>
    <string name="connected_to_googleapiclient">Connected to GoogleApiClient</string>
    <string name="connection_suspended">Connection suspended</string>
    <string name="connection_failed_get_error_code">"Connection failed: ConnectionResult.getErrorCode() = "</string>
    <string name="connection_to_remote_server_service_could_not_be_established">Connection to remote server &amp; service could not be established\r\nPlease restart the application</string>
    <string name="contract">Contract</string>
    <string name="contract_short_description">Contract short description</string>
    <string name="contract_uppercase">CONTRACT</string>
    <string name="cost_r5400">Cost: R5400</string>
    <string name="could_not_read_json_unexpected_character">Could not read JSON: Unexpected character</string>
    <string name="could_not_step_the_job_through_workflow">Could not step the Job through workflow</string>
    <string name="create_job">Create Job</string>
    <string name="create_job_error">Please fill necessary details, Job info incomplete</string>
    <string name="current_location_is_null">Current Location is null, so the userDTO will have to confirm that the Location Services are enabled.</string>
    <string name="dash">-</string>
    <string name="dayworks_section_m9100">Dayworks/Section M9100?</string>
    <string name="decline_job">Decline Job</string>
    <string name="approve_job">Approve Job</string>
    <string name="correct_job">Correct Job</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="correct">Correct</string>
    <string name="correct_estimate">Correct Estimates</string>
    <string name="correct_measure">Correct Measurements</string>
    <string name="decline_measurement_item">Decline Measure Item</string>
    <string name="declining_measurements">Declining measurements</string>
    <string name="delete">Delete</string>
    <string name="device_cleanup_failed">Device cleanup failed</string>
    <string name="device_info">registerRequest</string>
    <string name="direction">Direction</string>
    <string name="direction_uppercase">DIRECTION</string>
    <string name="do_you_wish_to_approve_or_decline_job_measure_item">Do you wish to approve or decline Job Measure Item?</string>
    <string name="do_you_wish_to_start_work_on_this_job">Do you wish to start work on this job?</string>
    <string name="downloading_of_photo_failed_please_try_again">Downloading of photo failed, please try again</string>
    <string name="downloading_photo">Downloading photo…</string>
    <string name="drawer_close" />
    <string name="logout">Logout</string>
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="no_7">7</string>
    <string name="no_8">8</string>
    <string name="no_9">9</string>
    <string name="no_0">0</string>
    <string name="pin">Pin</string>
    <string name="select_project">Select Project</string>
    <string name="select_contract">Select Contract</string>
    <string name="refresh_lookups">Clean and Refresh</string>
    <string name="refresh_workflow_items">Refresh Workflow Items</string>
    <string name="menu_home">Home</string>
    <string name="menu_create">Create Job</string>
    <string name="menu_unSubmitted">Unsubmitted Jobs</string>
    <string name="menu_estCorrection">Estimates For Correction</string>
    <string name="menu_approveJbs">Approve Jobs</string>
    <string name="menu_work">Work</string>
    <string name="menu_estMeasure">Measure Estimates</string>
    <string name="menu_approvMeasure">Approve Measurements</string>
    <string name="notificationS_title">Vibrate</string>
    <string name="notificationv_title">Notification tone</string>
    <string name="notification_title">Turn Notification On</string>
    <string name="att_title">Use High Priority notifications</string>
    <string name="att_summary_on">Switch off notifications previews</string>
    <string name="att_summary_off">Show previews of notifications at the top of the screen</string>
    <string name="theme_title">Change Theme</string>
    <string name="attach_title">Keep on Dark Mode</string>
    <string name="attach_summary_on">Switch off dark mode and start app in default theme
    </string>
    <string name="attach_summary_off">Automatically start app in dark mode</string>
    <string name="sync_title">Sync workflow periodically</string>
    <string name="attachment_title">Download new data</string>
    <string name="attachment_summary_on">Automatically download new job information</string>
    <string name="attachment_summary_off">Manually Download new job information</string>
    <string name="sync_header">Sync Workflow</string>
    <string name="general_header">General</string>
    <string name="notification_header">App Notifications</string>
    <string name="confirm_project_selection">Confirm Project Selection</string>
    <string name="description">Description</string>
</resources>