<!--
  ~ Copyright 2018 The app Open Source ProjectDTO
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat

            app:key="general_switch"
            app:title="@string/theme_title" />

        <SwitchPreferenceCompat
            app:dependency="general_switch"
            app:key="attachment"
            app:summaryOff="@string/attach_summary_off"
            app:summaryOn="@string/attach_summary_on"
            app:title="@string/attach_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/notification_title" />

        <SwitchPreferenceCompat
            app:dependency="notification"
            app:key="notification_preview"
            app:summaryOff="@string/att_summary_off"
            app:summaryOn="@string/att_summary_on"
            app:title="@string/att_title" />

        <SwitchPreferenceCompat
            app:dependency="notification"
            app:key="notification_tone"
            app:title="@string/notificationv_title" />



        <SwitchPreferenceCompat
            app:dependency="notification"
            app:key="notification_vibrate"
            app:title="@string/notificationS_title" />
    </PreferenceCategory>
<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="sync_auto"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
