<?xml version="1.0" encoding="utf-8"?>
<!--
  * Updated by Shaun McDonald on 2021/02/08
  * Last modified on 2021/02/08 3:05 PM
  * Copyright (c) 2021.  XI Systems  - All rights reserved
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_unSubmitted"
            android:icon="@drawable/ic_unsubmitted"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_unSubmitted"/>

        <item
            android:id="@+id/nav_work"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_work" />

    </group>

    <item android:title="@string/engineering_section_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_approveJobs"
                    app:actionViewClass="android.widget.TextView"
                    android:icon="@drawable/ic_approve"
                    android:title="@string/menu_approveJbs" />

                <item
                    android:id="@+id/nav_estMeasure"
                    android:icon="@drawable/ic_measure"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/menu_estMeasure" />

                <item
                    android:id="@+id/nav_approveMeasure"
                    app:actionViewClass="android.widget.TextView"
                    android:icon="@drawable/ic_approve_measure"
                    android:title="@string/menu_approvMeasure" />
            </group>
        </menu>


    </item>

</menu>

