<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/refresh_todo_list_items"
        android:orderInCategory="100"
        android:title="@string/refresh_workflow_items"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/refresh_lookups"
        android:orderInCategory="100"
        android:title="@string/refresh_lookups"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="collapseActionView" />
</menu>
