<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.create.CreateFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_createjob" >
        <action
                android:id="@+id/action_nav_create_to_addProjectFragment"
                app:destination="@+id/addProjectFragment"
                app:enterAnim="@anim/bounce_250"
                app:launchSingleTop="false"
                app:popEnterAnim="@anim/bounce_500"
                app:popUpTo="@+id/nav_create"
                app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_unSubmitted"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.unsubmitted.UnSubmittedFragment"
        android:label="@string/menu_unSubmitted"
        tools:layout="@layout/fragment_unsubmittedjobs" />

    <fragment
        android:id="@+id/nav_correction"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.corrections.CorrectionsFragment"
        android:label="@string/menu_estCorrection"
        tools:layout="@layout/fragment_correction" />

    <fragment
        android:id="@+id/nav_work"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.work.WorkFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/nav_estMeasure"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.estmeasure.MeasureFragment"
        android:label="@string/menu_estMeasure"
        tools:layout="@layout/fragment_estmeasure" />

    <fragment
        android:id="@+id/nav_approveJbs"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.approvejobs.ApproveJobsFragment"
        android:label="@string/menu_approveJbs"
        tools:layout="@layout/fragment_approvejob" />

    <fragment
        android:id="@+id/nav_approvMeasure"
        android:name="za.co.xisystems.itis_rrm.ui.mainview.approvemeasure.ApproveMeasureFragment"
        android:label="@string/menu_approvMeasure"
        tools:layout="@layout/fragment_approvemeasure" />
    <fragment
            android:id="@+id/selectItemFragment"
            android:name="za.co.xisystems.itis_rrm.ui.mainview.create.select_item.SelectItemFragment"
            android:label="SelectItemFragment">
        <action
                android:id="@+id/action_selectItemFragment_to_addProjectFragment"
                app:destination="@id/addProjectFragment"
                app:enterAnim="@anim/bounce_250"
                app:popEnterAnim="@anim/bounce" />
    </fragment>
    <fragment
            android:id="@+id/estimatePhotoFragment"
            android:name="za.co.xisystems.itis_rrm.ui.mainview.create.EstimatePhotoFragment"
            android:label="EstimatePhotoFragment" />
    <fragment
            android:id="@+id/addProjectFragment"
            android:name="za.co.xisystems.itis_rrm.ui.mainview.create.add_project_item.AddProjectFragment"
            android:label="AddProjectFragment" >
        <action
                android:id="@+id/action_addProjectFragment_to_selectItemFragment"
                app:destination="@id/selectItemFragment"
                app:popUpTo="@+id/addProjectFragment" />
        <action
                android:id="@+id/action_addProjectFragment_to_nav_create"
                app:destination="@id/nav_create" />
        <argument
                android:name="selecteD"
                app:argType="string" />
    </fragment>
</navigation>